add secrets.yml to git repo

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ rerun.txt
 pickle-email-*.html
 
 # Only include if you have production secrets in this file, which is no longer a Rails default
-config/secrets.yml
+#config/secrets.yml
 config/database.yml
 
 # dotenv
