use twitter api

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
 KMY_API_DATABASE_PASSWORD=
 SECRET_KEY_BASE=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_ACCESS_TOKEN=
+TWITTER_ACCESS_TOKEN_SECRET=
 
 DEPLOY_SERVER=
 DEPLOY_TO=
